# robotics

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: dry_run.yaml  openpi_libero_rollouts.yaml  openpi_libero_smoke.yaml  toy_oracle_validation.yaml  toy_risk_learning.yaml
docs/: openpi_experiment_protocol.md  openpi_libero_setup.md
reports/: 2026-12-05_initial_project_goal.md  openpi_controlled_deployment_jobs_seed4000.jsonl  openpi_cross_suite_jobs_seed5000.jsonl  openpi_libero_official_eval_smoke.md  openpi_libero_official_smoke_summary.json  openpi_libero_risk_planning.md  openpi_libero_risk_summary.json  openpi_libero_rollout_summary_10094.json  openpi_libero_rollout_summary_10095.json  openpi_libero_rollout_summary_10096.json  openpi_libero_rollout_summary_10097.json  openpi_libero_rollout_summary_10098.json  openpi_libero_rollout_summary_10099.json  openpi_libero_rollout_summary_10120.json  openpi_libero_rollout_summary_10121.json  openpi_libero_rollout_summary_10127.json  openpi_libero_rollout_summary_10128.json  openpi_libero_rollout_summary_10129.json  openpi_libero_rollout_summary_10130.json  openpi_libero_rollout_summary_10131.json  openpi_libero_rollout_summary_10132.json  openpi_libero_rollout_summary_10133.json  openpi_libero_rollout_summary_10134.json  openpi_libero_rollout_summary_10135.json  openpi_libero_rollout_summary_10136.json  openpi_libero_rollout_summary_10137.json  openpi_libero_rollout_summary_10138.json  openpi_libero_rollout_summary_10139.json  openpi_libero_rollout_summary_10140.json  openpi_libero_rollout_summary_10141.json  (+100 more)
(+90 files in other folders)
