[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-aware-skill-planning"
version = "0.1.0"
description = "Toy and manipulation scaffolding for calibrated risk-aware symbolic skill planning."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
rask = "risk_aware_skill_planning.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
